test/fail/errors/NoSuchBuiltinName.agda
module NoSuchBuiltinName where

postulate X : Set

{-# BUILTIN FOOBAR X #-}

